--- a/main.html
+++ b/main.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
-
 <html>
   <head>
     <link rel="stylesheet" href="styles.css" />
   </head>
-
   <body>
-	  <h2>Voting Eligibility Form</h2>
-    
+    <h2>Voting Eligibility Form</h2>
+
     <form id="votingForm">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required>
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" required />
 
-        <label for="age">Age:</label>
-        <input type="number" id="age" name="age" required>
+      <label for="age">Age:</label>
+      <input type="number" id="age" name="age" required />
 
-        <button type="submit" id="btn">Submit</button>
-    <!-- write the body here -->
+      <button type="submit" id="btn">Submit</button>
+    </form>
 
     <script type="text/javascript" src="./script.js"></script>
   </body>
